--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,40 +1,40 @@
-.App {
-  text-align: center;
-  color: #0f0f0f;
-  color: #fdffff;
-  font-size: 36px;
-  /* font-family: "Rakkas", cursive; */
-  font-family: "Open Sans", sans-serif;
-  letter-spacing: 2px;
-}
-
-#navbar {
+.navbar {
+  width: 75rem;
+  margin: 20px 0 0 100px;
+  padding: 2rem auto;
   /* border: 1px solid #fff; */
-  font-size: 18px;
-  display: flex;
-  width: 100%;
-  height: 60px;
-  margin: auto;
-  justify-content: space-around;
-  align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  color: #fff;
   position: fixed;
-  top: 0;
-  width: 100%;
   z-index: 50;
 }
-#navbar > p {
+
+#navbarLeft {
+  /* border: 1px solid orange; */
+  width: 50%;
+  height: 60px;
+}
+
+#navbarRight {
+  /* border: 1px solid #fff; */
+  font-size: 17px;
+  width: 50%;
+  height: 60px;
+  font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+#navbarRight > a {
   text-decoration: none;
   cursor: pointer;
+  color: #fff;
 }
 button {
-  background-color: #f4a25f;
+  background-color: orange;
   font-family: "Open Sans", sans-serif;
   color: #0d2334;
-  padding: 8px 15px;
-  font-size: 18px;
-  border-radius: 8px;
+  padding: 9px 12px;
+  font-size: 16px;
+  /* border-radius: 8px; */
+  border: none;
 }
