--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,14 @@
 .navbar {
+  display: flex;
   width: 75rem;
+  height: 80px;
   margin: 20px 0 0 100px;
-  padding: 2rem auto;
+  padding: 1rem auto;
   /* border: 1px solid #fff; */
   position: fixed;
   z-index: 50;
+  justify-content: "center";
+  align-items: "center";
 }
 
 #navbarLeft {
@@ -16,7 +20,7 @@
 #navbarRight {
   /* border: 1px solid #fff; */
   font-size: 17px;
-  width: 50%;
+  width: 47%;
   height: 60px;
   font-weight: 500;
   display: flex;
@@ -37,4 +41,74 @@ button {
   font-size: 16px;
   /* border-radius: 8px; */
   border: none;
+}
+
+button a {
+  text-decoration: none;
+  color: #0d2334;
+}
+
+/* Media Query for Mobile Devices */
+@media (max-width: 480px) {
+  .navbar {
+    /* background-color: red; */
+    width: 78rem;
+    height: 60px;
+    margin-top: 30px;
+  }
+  #navbarRight {
+    font-size: 14px;
+    width: 40%;
+  }
+}
+
+/* Media Query for Tablets Ipads portrait mode */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .navbar {
+    /* background-color: blue; */
+    width: 82rem;
+    height: 60px;
+    margin: 20px 0 0 10px;
+  }
+  #navbarRight {
+    /* border: 1px solid #fff; */
+    font-size: 14px;
+    width: 42%;
+    height: 60px;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+  }
+  #navbarRight > a {
+    text-decoration: none;
+    cursor: pointer;
+    color: #fff;
+  }
+  button {
+    padding: 5px 7px;
+    font-size: 13px;
+  }
+}
+
+/* Media Query for Laptops and Desktops */
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .navbar {
+    width: 80rem;
+    /* background-color: green; */
+    margin: 20px 0 0 50px;
+  }
+  #navbarRight {
+    width: 42%;
+  }
+  #navbarRight > a {
+    text-decoration: none;
+    cursor: pointer;
+    color: #fff;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
 }
