--- a/src/sections/Home/Home.module.css
+++ b/src/sections/Home/Home.module.css
@@ -21,9 +21,21 @@
   line-height: 80px;
   font-family: Poppins;
   margin-top: 0;
+  animation-fill-mode: both;
+  animation-duration: 1782ms;
+  animation-delay: 0ms;
+  animation-iteration-count: 1;
+  opacity: 1;
+  animation-name: react-reveal-233916221479562-1;
 }
 .homeLeft p {
   font-size: 18px;
+  animation-fill-mode: both;
+  animation-duration: 1587ms;
+  animation-delay: 0ms;
+  animation-iteration-count: 1;
+  opacity: 1;
+  animation-name: react-reveal-233916221479562-1;
 }
 .homeLeft p span {
   border-bottom: 2px solid orange;
@@ -36,9 +48,15 @@
 
 .homeLeftDescp p {
   font-size: 20px;
+  animation-fill-mode: both;
+  animation-duration: 2000ms;
+  animation-delay: 0ms;
+  animation-iteration-count: 1;
+  opacity: 1;
+  animation-name: react-reveal-233916221479562-1;
 }
 .homeLeftDescp span {
-  /* border: 1px solid orange; */
+  border: 1px solid orange;
   margin: auto;
   width: 95px;
   background-color: orange;
@@ -53,6 +71,12 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
+  animation-fill-mode: both;
+  animation-duration: 1260ms;
+  animation-delay: 0ms;
+  animation-iteration-count: 1;
+  opacity: 1;
+  animation-name: react-reveal-233916221479562-1;
 }
 .Social a {
   color: #fff;
@@ -95,6 +119,59 @@
 
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
+  .homeInfo {
+    /* border: 2px solid yellow; */
+    width: 96%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding-top: 80px;
+  }
+  .homeLeft h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 40px;
+    font-family: Poppins;
+    margin-top: 0;
+  }
+
+  .homeLeft > p {
+    /* border: 1px solid; */
+    font-size: 15px;
+    width: 35%;
+    height: 140px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
+  }
+
+  .homeLeftDescp > p {
+    /* border: 1px solid; */
+    font-size: 15px;
+  }
+  .homeLeftDescp span {
+    border: 1px solid orange;
+    margin: auto;
+    width: 70px;
+    margin-left: 15px;
+    background-color: orange;
+  }
+
+  .Social {
+    width: 11%;
+  }
+
+  .Social svg {
+    width: 30px;
+    height: 25px;
+    fill: orange;
+  }
+  .profilePic {
+    width: 200px;
+    height: 200px;
+    margin-left: 68px;
+  }
 }
 
 /* Media Query for Tablets Ipads portrait mode */
