--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -67,7 +67,7 @@ button a {
     width: 90%;
   }
   button {
-    padding: 5px 10px;
+    padding: 5px 6px;
     font-size: 13px;
   }
 }
@@ -80,14 +80,13 @@ button a {
     margin: 20px 0 0 10px;
   }
   #navbarLeft {
-    /* border: 1px solid orange; */
-    width: 0%;
+    /* border: 1px solid orange;*/
+    width: 10%;
   }
   #navbarRight {
     /* border: 1px solid #fff; */
     font-size: 15px;
-    width: 42%;
-    margin-left: 140px;
+    width: 40%;
   }
   #navbarRight > a {
     text-decoration: none;
@@ -103,9 +102,10 @@ button a {
 /* Media Query for Laptops and Desktops */
 @media (min-width: 1025px) and (max-width: 1280px) {
   .navbar {
-    width: 38rem;
-    background-color: green;
-    margin: 10px 0 0 50px;
+    width: 50rem;
+    /* background-color: green; */
+    height: 60px;
+    /* margin: 10px 0 0 120px; */
   }
   #navbarLeft {
     /* border: 1px solid orange; */
@@ -113,12 +113,17 @@ button a {
     height: 60px;
   }
   #navbarRight {
-    width: 90%;
+    width: 60%;
+    margin-left: 300px;
   }
   #navbarRight > a {
     text-decoration: none;
     cursor: pointer;
     color: #fff;
+  }
+  button {
+    padding: 5px 7px;
+    font-size: 13px;
   }
 }
 
