--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,11 @@ canvas {
   vertical-align: bottom;
 }
 #tsparticles {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: 100%;
-  background-color: #0f304d;
+  /* background-color: #0f304d;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 50% 50%;
+  background-position: 50% 50%; */
 }
