--- a/src/sections/GitStats/GitStats.module.css
+++ b/src/sections/GitStats/GitStats.module.css
@@ -1,11 +1,13 @@
 .gitStats {
   /* border: 3px solid #fff; */
+  position: relative;
 }
 
 .headingContainer {
   display: flex;
   width: 35%;
   margin: auto;
+  padding: 50px 0;
 }
 .heading {
   font-size: 23px;
