--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,44 +1,34 @@
-.homeInfo {
+.home {
   /* border: 1px solid #fff; */
   display: flex;
-  width: 82%;
-  color: #fff;
-  margin: auto;
-  height: 500px;
-  justify-content: space-around;
-  padding-top: 130px;
   position: relative;
+  color: #fff;
+  width: 82%;
+  height: 600px;
+  justify-content: center;
+  padding: 150px 0 50px 0;
+  margin: auto;
 }
 
 .homeLeft {
   /* border: 1px solid orange; */
-  width: 59%;
+  width: 60%;
   text-align: left;
+  height: 100%;
 }
 
 .homeLeft h1 {
   font-size: 3.2rem;
   font-weight: 600;
-  line-height: 80px;
+  line-height: 70px;
   font-family: Poppins;
   margin-top: 0;
-  animation-fill-mode: both;
-  animation-duration: 1782ms;
-  animation-delay: 0ms;
-  animation-iteration-count: 1;
-  opacity: 1;
-  animation-name: react-reveal-233916221479562-1;
+  padding: 20px 0;
 }
 .homeLeft > p {
   font-size: 18px;
-  width: 85%;
+  width: 90%;
   word-spacing: 2px;
-  animation-fill-mode: both;
-  animation-duration: 1587ms;
-  animation-delay: 0ms;
-  animation-iteration-count: 1;
-  opacity: 1;
-  animation-name: react-reveal-233916221479562-1;
 }
 .homeLeft p span {
   border-bottom: 2px solid orange;
@@ -51,12 +41,6 @@
 
 .homeLeftDescp p {
   font-size: 20px;
-  animation-fill-mode: both;
-  animation-duration: 2000ms;
-  animation-delay: 0ms;
-  animation-iteration-count: 1;
-  opacity: 1;
-  animation-name: react-reveal-233916221479562-1;
 }
 .homeLeftDescp > span {
   border: 1px solid orange;
@@ -69,18 +53,19 @@
   /* border: 1px solid orange; */
   color: #fff;
   font-size: 18px;
-  width: 23%;
+  width: 40%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 40px;
-  animation-fill-mode: both;
-  animation-duration: 1260ms;
-  animation-delay: 0ms;
-  animation-iteration-count: 1;
-  opacity: 1;
-  animation-name: react-reveal-233916221479562-1;
 }
+.resume {
+  padding: 8px 12px;
+  font-size: 16px;
+  border: 1px solid orange;
+  font-weight: 700;
+}
+
 .Social a {
   color: #fff;
 }
@@ -92,7 +77,7 @@
 .Social svg:hover {
   fill: #fff;
 }
-.profile {
+/* .profile {
   width: 34%;
 }
 .profilePic {
@@ -101,11 +86,12 @@
   background-position: center;
   background-size: cover;
   box-shadow: inset 0 0 0 9px rgb(225, 255, 255/ 30%);
-  width: 360px;
-  height: 360px;
+  width: 310px;
+  height: 310px;
   animation: profile-pic__animate 8s ease-in-out infinite 1s;
   margin: auto;
   margin-top: 30px;
+  margin-left: 100px;
 }
 
 @keyframes profile-pic__animate {
@@ -118,11 +104,11 @@
   100% {
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
   }
-}
+} */
 
 /* Media Query for Mobile Devices */
 @media (min-width: 360px) and (max-width: 767px) {
-  .homeInfo {
+  .home {
     /* border: 2px solid yellow; */
     width: 96%;
     height: auto;
@@ -134,7 +120,7 @@
   .homeLeft h1 {
     /* border: 1px solid; */
     width: 155%;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: 600;
     line-height: 35px;
     font-family: Poppins;
@@ -145,8 +131,8 @@
   }
   .homeLeft > p {
     /* border: 1px solid; */
-    font-size: 16px;
-    width: 160%;
+    font-size: 18px;
+    width: 162%;
     margin-left: 8px;
   }
 
@@ -170,26 +156,29 @@
   }
   .Social {
     /* border: 1px solid #fff; */
-    width: 60%;
+    width: 120%;
     margin-left: 8px;
   }
 
   .Social > .icons {
-    width: 35px;
-    height: 30px;
+    width: 12px;
+    height: 8px;
     fill: orange;
   }
-  .profilePic {
-    width: 190px;
-    height: 190px;
-    margin-left: 90px;
-    margin-top: 40px;
+  /* .profilePic {
+    width: 200px;
+    height: 200px;
+    margin-left: 100px;
+    margin-top: 80px;
+  } */
+  .resume {
+    padding: 8px 10px;
   }
 }
 
 /* Media Query for Tablets Ipads portrait mode */
 @media (min-width: 768px) and (max-width: 1024px) {
-  .homeInfo {
+  .home {
     /* border: 2px solid yellow; */
   }
   .homeLeft h1 {
@@ -206,6 +195,7 @@
   .homeLeft > p {
     /* border: 1px solid; */
     font-size: 19px;
+    width: 108%;
     display: flex;
     flex-wrap: wrap;
   }
@@ -229,8 +219,8 @@
   }
   .Social {
     /* border: 1px solid #fff; */
-    margin-top: 20px;
-    width: 32%;
+    margin-top: 4 0px;
+    width: 60%;
   }
 
   .Social > .icons {
@@ -238,11 +228,11 @@
     height: 35px;
     fill: orange;
   }
-  .profilePic {
-    width: 250px;
-    height: 250px;
-    margin-left: 60px;
-  }
+  /* .profilePic {
+    width: 220px;
+    height: 220px;
+    margin-left: 80px;
+  } */
 }
 
 /* Media Query for Laptops and Desktops */
@@ -262,8 +252,10 @@
   .homeLeft > p {
     /* border: 1px solid; */
     font-size: 22px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
+    margin: 15px 0;
   }
   .homeLeftDescp {
     display: flex;
@@ -276,11 +268,12 @@
   }
   .Social {
     /* border: 1px solid #fff; */
-    margin-top: 30px;
-    width: 26%;
+    margin-top: 50px;
+    width: 48%;
   }
-  .profilePic {
-    width: 290px;
-    height: 290px;
-  }
+  /* .profilePic {
+    width: 260px;
+    height: 260px;
+    margin-left: 60px;
+  } */
 }
