--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,133 +1,23 @@
-.navbar {
-  display: flex;
-  width: 75rem;
-  height: 80px;
-  margin: 20px 0 0 100px;
-  padding: 1rem auto;
-  /* border: 1px solid #fff; */
-  position: fixed;
-  z-index: 50;
-  justify-content: "center";
-  align-items: "center";
-}
-
-#navbarLeft {
-  /* border: 1px solid orange; */
-  width: 50%;
-  height: 60px;
-}
-
-#navbarRight {
-  /* border: 1px solid #fff; */
-  font-size: 17px;
-  width: 47%;
-  height: 60px;
-  font-weight: 500;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: auto;
-}
-#navbarRight > a {
-  text-decoration: none;
-  cursor: pointer;
+/* .navbar {
+  position: relative;
+  border: 1px solid white;
   color: #fff;
-}
-#navbarRight > a:hover {
-  border-bottom: 2px solid orange;
-}
+  text-align: center;
+  width: 80%;
+  height: 60px;
+  margin: auto;
+} */
 .resume {
   background-color: orange;
   font-family: "Open Sans", sans-serif;
   color: #0d2334;
-  padding: 9px 12px;
+  padding: 6px 12px;
   font-size: 16px;
   /* border-radius: 8px; */
   border: none;
+  font-weight: 700;
 }
 
-.resume > a {
-  text-decoration: none;
-  color: #0d2334;
+a:hover {
+  border-bottom: 2.5px solid orange;
 }
-
-/* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 767px) {
-  .navbar {
-    width: 24rem;
-    /* background-color: red; */
-    height: 60px;
-    margin-left: 10px;
-    padding-top: 10px;
-  }
-  #navbarLeft {
-    width: 0%;
-  }
-  #navbarRight {
-    font-size: 14px;
-    width: 94%;
-  }
-  .resume {
-    padding: 5px 6px;
-    font-size: 13px;
-  }
-}
-
-/* Media Query for Tablets Ipads portrait mode */
-@media (min-width: 768px) and (max-width: 1024px) {
-  .navbar {
-    /* background-color: blue; */
-    height: 60px;
-    margin: 20px 0 0 10px;
-  }
-  #navbarLeft {
-    /* border: 1px solid orange;*/
-    width: 10%;
-  }
-  #navbarRight {
-    /* border: 1px solid #fff; */
-    font-size: 15px;
-    width: 40%;
-  }
-  #navbarRight > a {
-    text-decoration: none;
-    cursor: pointer;
-    color: #fff;
-  }
-  .resume {
-    padding: 5px 7px;
-    font-size: 13px;
-  }
-}
-
-/* Media Query for Laptops and Desktops */
-@media (min-width: 1025px) and (max-width: 1280px) {
-  .navbar {
-    width: 50rem;
-    /* background-color: green; */
-    height: 60px;
-    /* margin: 10px 0 0 120px; */
-  }
-  #navbarLeft {
-    /* border: 1px solid orange; */
-    width: 1%;
-    height: 60px;
-  }
-  #navbarRight {
-    width: 60%;
-    margin-left: 300px;
-  }
-  #navbarRight > a {
-    text-decoration: none;
-    cursor: pointer;
-    color: #fff;
-  }
-  .resume {
-    padding: 5px 7px;
-    font-size: 13px;
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up)
-@media only screen and (min-width: 1200px) {
-} */
