--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,15 +1,15 @@
-.main {
+.skills {
   /* border: 1px solid #fff; */
-  padding-top: 70px;
+  padding-top: 100px;
   position: relative;
 }
 .skillsContainer1 {
   width: 82%;
-  height: 500px;
+  height: 550px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5px;
+  gap: 8px;
   margin: auto;
   color: #fff;
   border-radius: 10px;
@@ -116,26 +116,32 @@
 }
 
 /* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .headingContainer1 {
     display: flex;
-    width: 50%;
-    margin: auto;
-    padding: 30px 0 0 0;
+    width: 70%;
+    /* margin: auto; */
+    padding: 10px 0 0 0;
   }
   .heading1 {
-    font-size: 18px;
+    font-size: 20px;
   }
   .orangeDash1 {
     width: 60px;
   }
   .skillsContainer1 {
-    width: 90%;
+    width: 96%;
   }
   .frontendBackend1 {
-    gap: 10px;
+    gap: 15px;
   }
-
+  .skills1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+  }
   .iconss {
     width: 50px;
     height: 50px;
@@ -150,13 +156,13 @@
 @media (min-width: 768px) and (max-width: 1024px) {
   .headingContainer1 {
     display: flex;
-    width: 28%;
+    width: 40%;
     margin: auto;
     padding: 30px 0 0 0;
   }
   /* .heading {
-    font-size: 18px;
-  } */
+        font-size: 18px;
+      } */
   .orangeDash1 {
     width: 70px;
   }
@@ -180,23 +186,12 @@
 }
 
 /* Media Query for Laptops and Desktops */
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1024px) and (max-width: 1280px) {
   .headingContainer1 {
-    display: flex;
-    width: 25%;
-    margin: auto;
-    padding: 30px 0 0 0;
+    width: 30%;
   }
   .frontendBackend1 {
-    padding: 20px;
-    gap: 10px;
-  }
-  .iconss {
-    width: 110px;
-    height: 110px;
-  }
-  .imgLogo1 {
-    width: 110px;
-    height: 110px;
+    padding: 10px;
+    gap: 30px;
   }
 }
