--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,7 +7,7 @@
   height: 60px;
   margin: auto;
 } */
-.resume {
+.resumes {
   background-color: orange;
   font-family: "Open Sans", sans-serif;
   color: #0d2334;
