--- a/src/components/Home/profile.css
+++ b/src/components/Home/profile.css
@@ -1,18 +1,20 @@
 .profile {
+  /* border: 1px solid; */
+  display: flex;
   width: 34%;
 }
-.profilePic {
-  background: url(../../images/profile-pic.jpg);
-  background-repeat: no-repeat;
+.home-img {
+  /* background: url(../../images/profile-pic.jpg); */
+  /* background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
   box-shadow: inset 0 0 0 9px rgb(225, 255, 255/ 30%);
-  width: 310px;
-  height: 310px;
+  width: 280px;
+  height: 315px;
   animation: profile-pic__animate 8s ease-in-out infinite 1s;
   margin: auto;
-  margin-top: 30px;
-  margin-left: 100px;
+  margin-left: 110px;
+  margin-top: 25px;
 }
 
 @keyframes profile-pic__animate {
@@ -28,27 +30,45 @@
 }
 
 @media (min-width: 360px) and (max-width: 767px) {
-  .profilePic {
-    width: 200px;
+  .profile {
+    /* border: 1px solid; */
+    display: flex;
+    width: 98%;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+  }
+  .home-img {
+    margin: auto;
+    width: 180px;
     height: 200px;
-    margin-left: 100px;
-    margin-top: 80px;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .profilePic {
+  .profile {
+    /* border: 1px solid; */
+    display: flex;
+    width: 25%;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: 100px;
+  }
+  .home-img {
     width: 220px;
-    height: 220px;
-    margin-left: 80px;
+    height: 240px;
+    margin: auto;
   }
 }
 
 /* Media Query for Laptops and Desktops */
 @media (min-width: 1025px) and (max-width: 1280px) {
-  .profilePic {
-    width: 260px;
-    height: 260px;
-    margin-left: 60px;
+  .home-img {
+    width: 300px;
+    height: 280px;
+    /* margin-left: 60px; */
   }
 }
