--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -92,7 +92,7 @@
 input[type="email"] {
   border: 2px solid #fff;
   padding: 10px 0 10px 10px;
-  background-color: #0b1e2e;
+  background-color: #171717;
   width: 42%;
   color: gray;
   font-size: 14px;
@@ -108,7 +108,7 @@ input[type="email"] {
   border: 2px solid #fff;
   width: 90%;
   padding: 10px 0 150px 10px;
-  background-color: #0b1e2e;
+  background-color: #171717;
   color: gray;
   font-size: 14px;
 }
